%%{init: {'flowchart': {'curve': 'linear'}, 'classDiagram': {'direction': 'LR'}}}%%
classDiagram
    %% Interfaces for separation of concerns (Interface Segregation & Dependency Inversion)
    class Identifiable {
        <<interface>>
        + getId() UUID
    }

    class Auditable {
        <<interface>>
        + getCreatedAt() OffsetDateTime
        + getUpdatedAt() OffsetDateTime
    }

    %% Abstract base class for common entity patterns (Open/Closed Principle)
    class AbstractEntity {
        <<abstract>>
        # entityId: UUID
        # createdAt: OffsetDateTime
        # updatedAt: OffsetDateTime
        + getId() UUID
        + getCreatedAt() OffsetDateTime
        + getUpdatedAt() OffsetDateTime
    }

    %% Core domain entities
    class Client {
        - clientId: UUID
        - email: String
        - displayName: String
        - status: ClientStatus
        - createdAt: OffsetDateTime
        - updatedAt: OffsetDateTime
        + getters/setters
    }

    class Account {
        - accountId: UUID
        - clientId: UUID
        - status: AccountStatus
        - openedAt: OffsetDateTime
        + getters/setters
    }

    class Instrument {
        - instrumentId: UUID
        - symbol: String
        - name: String
        - assetClass: AssetClass
        - status: InstrumentStatus
        + getters/setters
    }

    class Order {
        - orderId: UUID
        - accountId: UUID
        - instrumentId: UUID
        - side: OrderSide
        - quantity: BigDecimal
        - idempotencyKey: String
        - submittedAt: OffsetDateTime
        + getters/setters
    }

    class Fill {
        - fillId: UUID
        - orderId: UUID
        - price: BigDecimal
        - quantity: BigDecimal
        - status: FillStatus
        - executedAt: OffsetDateTime
        + getters/setters
    }

    class AdminUser {
        - adminUserId: UUID
        - email: String
        - displayName: String
        - role: AdminRole
        - status: AdminUserStatus
        - createdAt: OffsetDateTime
        - updatedAt: OffsetDateTime
        + getters/setters
    }

    %% Event entities - separated for Single Responsibility
    class LoginEvent {
        - loginEventId: UUID
        - clientId: UUID
        - emailAttempted: String
        - outcome: LoginOutcome
        - occurredAt: OffsetDateTime
        - details: String
        + getters/setters
    }

    class OrderEvent {
        - orderEventId: UUID
        - orderId: UUID
        - accountId: UUID
        - action: String
        - occurredAt: OffsetDateTime
        - details: String
        + getters/setters
    }

    %% Analytics/Fact tables
    class FactDailyInstrumentActivity {
        - activityDate: LocalDate
        - instrumentId: UUID
        - orderCount: Integer
        - filledQuantity: BigDecimal
        - grossAmount: BigDecimal
        - updatedAt: OffsetDateTime
        + getters/setters
    }

    class FactDailyPlatformActivity {
        - activityDate: LocalDate
        - totalOrders: Integer
        - totalFills: Integer
        - grossAmount: BigDecimal
        - updatedAt: OffsetDateTime
        + getters/setters
    }

    %% Relationships
    Identifiable <|.. AbstractEntity
    Auditable <|.. AbstractEntity
    AbstractEntity <|-- Client
    AbstractEntity <|-- AdminUser
    Client "1" --> "*" Account
    Account "1" --> "*" Order
    Instrument "1" --> "*" Order
    Order "1" --> "*" Fill
    Client "1" --> "*" LoginEvent
    Order "1" --> "*" OrderEvent
    Instrument "1" --> "*" FactDailyInstrumentActivity